# send_gmail

./: LICENSE  README.md  pyproject.toml  setup.cfg  test.py
send_gmail/: __init__.py
